fixing contrast issues

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,5 +1,5 @@
 button {
-  background-color: #fe7f2d;
+  background-color: #168aad;
   border: none;
   color: white;
   padding: 15px 32px;
